# EN.615.781.81.SP26_Final_Project

./: .gitignore  615781_bb84_experiments.ipynb  615_781_Kuta_Nguyen_McLain.pptx  BB84-Intercept–Resend-Eavesdropper.tex  LICENSE  Simulation-Framework.tex  pyproject.toml
report/: project_selection.tex  report.tex
report/paper_journal_style/: AppendixA.tex  BB84-Intercept–Resend-Eavesdropper.tex  Baseline-BB84-Experiments.tex  Conclusion.tex  Error-Correction-Privacy-Amplification.tex  Introduction.tex  Results.tex  Simulation-Framework.tex  Study_Approach.tex  bibliography.bib  main.tex
src/final_project/: bb84.py  utils.py
